...
                        ),
                        Row(
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: [
                            Column(
                              children: [
                                Text("Customer",
                                    style: TextStyle(
                                      fontSize: 20,
                                      color: _borderColor1,
                                    )),
                                GestureDetector(
                                  onTap: () {
...
                            child: Column(
                              children: [
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                    labelText: "Fullname",
                                    prefixIcon: Icons.person_2_outlined,
                                    toggleText: false,
                                    controller: _fullNameController),
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                    labelText: "email",
                                    prefixIcon: Icons.email,
                                    toggleText: false,
                                    controller: _emailController),
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                    labelText: "phone",
                                    prefixIcon: Icons.phone,
                                    toggleText: false,
                                    controller: _phoneController),
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                  labelText: "password",
                                  prefixIcon: Icons.lock_open,
                                  suffixIcon: Icons.remove_red_eye_rounded,
                                  toggleText: true,
                                  controller: _passwordController,
                                  obscureText: true,
                                ),
...
                                ],
                                if (_user_role == "customer") ...[
                                  const SizedBox(
                                    height: 15,
                                  ),
                                  MyButton(
                                      text: "signup",
                                      onPressed: signUpCustomer,
                                      width: double.infinity),
                                ],
                              ],
                            )),
                        const SizedBox(
...
                                style: TextStyle(fontSize: 20)),
                            const SizedBox(
                              width: 8,
                            ),
                            TextButton(
                                onPressed: () {
                                  context.go("/login");
                                },
                                child: Text("Login",
                                    style: TextStyle(
                                        fontSize: 20,
                                        color: Colors.purple.shade300)))
                          ],
...
