...

class _FirstTimeUserPageState extends State<FirstTimeUserPage> {
  @override
  Widget build(BuildContext context) {
    return  MaterialApp( 
      debugShowCheckedModeBanner: false,
      title: "SkillTrade Hub",
      theme: lightMode,
      initialRoute: "/",
      routes: {
        // "/login" : (context) => LoginPage(),
        // "/signup" : (context) => SignupPage(),
        // "/customer":(context) => CustomerPage(),
...
