...
                              width: 8,
                            ),
                            TextButton(
                                onPressed: () {
                                  context.go("/signup");
                                },
                                child: Text("Sign up",
                                    style: TextStyle(
                                        fontSize: 20,
                                        color: Colors.purple.shade300)))
                          ],
                        )
                      ],
...
